--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRickMorty"
         tools:targetApi="31">
+        <activity android:name=".presentation.detail.EpisodeDetailActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
