--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRickMorty"
         tools:targetApi="31">
-        <activity android:name=".presentation.detail.EpisodeDetailActivity"></activity>
+        <activity android:name=".presentation.detail.EpisodeDetailActivity"/>
+        <activity android:name=".auth.LoginAlternateActivity" />
+        <activity android:name=".SplashActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
