--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         tools:targetApi="31">
         <activity android:name=".presentation.detail.EpisodeDetailActivity"/>
         <activity android:name=".auth.LoginAlternateActivity" />
-        <activity android:name=".SplashActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="false" />
         <activity
             android:name=".auth.LoginActivity"
