--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,11 @@
         tools:targetApi="31">
         <activity android:name=".presentation.detail.EpisodeDetailActivity"/>
         <activity android:name=".auth.LoginAlternateActivity" />
+        <activity android:name=".auth.LoginActivity"/>
         <activity android:name=".MainActivity"/>
+
         <activity
             android:name=".SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".auth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
