faltaba el registro
Reapasando los requerimientos faltaba completar el modulo de registro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".auth.LoginAlternateActivity" />
         <activity android:name=".auth.LoginActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".auth.RegisterActivity"/>
 
         <activity
             android:name=".SplashActivity"
